--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "preserveConstEnums": true,
     //    "outFile": "../../built/local/tsc.js",
     "sourceMap": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "./lianjia_out/"
   }
 }
