--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "db_undo": "npx sequelize-cli db:migrate:undo",
     "run_page": "node ./src/run/runPage.js",
     "run_house": "node ./src/run/runHouse.js",
-    "run_service": "node ./src/utils/service_test.js"
+    "run_service": "node ./lianjia_out/src/scraw/utils/service_test.js"
   },
   "dependencies": {
     "@types/bluebird": "^3.5.29",
